--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "jwt-decode": "^4.0.0",
+    "react": "^19.0.0",
     "react-router-dom": "^6.28.0"
   }
 }
